--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
+    "react-star-ratings": "^2.3.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
   },
