--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
   },
