--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-star-ratings": "^2.3.0",
