--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
